# fmlip-relay

./: .gitignore  CMakeLists.txt  LICENSE  README.md  meson.build  meson_options.txt  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
cmake/: fmlip_relay-config.cmake.in
config/: CMakeLists.txt  meson.build
config/modules/: fmlip_relay-utils.cmake
example/: CMakeLists.txt  Makefile  example_usage.f90  meson.build
src/: CMakeLists.txt  meson.build
src/c/: socket_utils.c
src/fortran/: mlip_client.f90
src/python/fmlip-relay/: protocol.py  server.py
src/python/fmlip-relay/backends/: base.py  lj.py  mace.py  mace_mp.py  mace_off.py
src/python/fmlip_relay/: __init__.py  __main__.py  check.py  protocol.py  server.py  test_mode.py
src/python/fmlip_relay/backends/: __init__.py  _mace_base.py  base.py  dummy.py  lj.py
tests/: conftest.py  test_backends.py  test_protocol.py  test_server.py
